frontend-travel-search/css/style.css
#formHeading {
    text-align: center;
    font-size: 20px;
    font-weight: bold;
    padding-bottom: 10px;
}

.panel-default {
    background-color: #F7F7F7;
}

.col-form-label {
    font-weight: normal;
    margin-right: 30px;
    font-weight: 500;
}

.redAsterisk {
    color: red;
    font-weight: bold;
}

.panel-body {
    margin-top: 15px;
    margin-bottom: 15px;
    padding-top: 10px;
    border: 1px solid#DCDCDC;
    border-radius: 5px;
}

img.placeIcon {
    width: 40px;
}

.fav, .detailsArrow {
    background-color: white;
    border: solid .08em #eee;
    border-radius: .1em;
    margin: .25em .25em .25em;
}

.filledStar {
    color: orange;
}

.authorName {
    font-weight: bold;
}

.authorPic {
    height: 50px;
    width: 50px
}

.yelpAuthorPic {
    height: 50px;
    width: 50px;
    border-radius: 40px;
}

#twitterButton {
    height: 30px;
    width: 30px;
}

#mapContainer {
    height: 300px;
    margin-bottom: 15px;
}

#gMapImg {
    display: none;
}

.streetViewIcon {
    height: 30px;
    width: 30px;
    border: solid .08em #eee;
    border-radius: .1em;
    margin: .25em .25em .25em;
}

.detailsButton {
    display: none;
}

.row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
  }
  
.column {
    flex: 25%;
    max-width: 25%;
    padding: 0 4px;
}
  
.column img {
margin-top: 8px;
vertical-align: middle;
}

@media screen and (max-width: 600px) {
.column {
        flex: 100%;
        max-width: 100%;
    }
}

.animateDetailsPanel {
    transition: all linear 0.5s;
    width: 100%;
    background: white;
    position: relative;
    right: 0px;
}

.animateDetailsPanel.ng-hide {
    transition: all linear 0.5s;
    right: 1000px;
}

.animateResultsPanel {
    transition: all linear 0.5s;
    width: 100%;
    background: white;
    position: relative;
    right: 0px;
}

.animateResultsPanel.ng-hide {
    left: 1000px;
}

.reviewsCard {
    margin: 5px;
}

#dropdownButtons {
    margin: 15px;
}
/* 
form#mainForm {
    padding-top: 10px;
    padding-bottom: 15px;
    padding-left: 150px;
    padding-right: 50px;
} */

#clearButton {
    background-color: white;
    border: 1px solid lightgray;
}

.detailsButton {
    display: block;
    margin-bottom: 10px;
    margin-top: 10px;
}

.infoFav {
    background-color: white;
    border: solid .08em #eee;
    border-radius: .1em;
    padding: 6.5px;
    border-radius: 3px;
}

#dailyOpenLink {
    text-decoration: underline;
}

#directionsForm {
    margin-top: 15px;
}

.fade1.ng-enter {
    transition:0.5s linear all;
    opacity:0;
  }
  
  /* The finishing CSS styles for the enter animation */
  .fade1.ng-enter.ng-enter-active {
    opacity:1;
  }
  .fade1.ng-leave {
    transition:0.5s linear all;
    opacity:1;
  }
  .fade1.ng-leave.ng-leave-active {
    opacity:0;
  }

